--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
         <head>
             <meta charset="UTF-8">
-            <title>TP1JS</title>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <link rel="stylesheet" href="style.css">
+            <title>Caroussel</title>
         </head>
     <body>
-        <div class="container">
-            <div id="note">
-                <div id="btn_button">
-                <div class="centrer"></div> 
-                <div id="center" class="centrer">
-                    <button class="Succ">Notification Success</button>
-                    <button class="Dan">Notification Danger</button>
-                    <button class="War" >Notification Warning</button>
-                    <button class="Info" >Notification Info</button>
-                </div>
-                </div>
-                <div id="note">
-
-                </div>
-            </div>
-            <div id="creernewdiv">
-                <!-- <div class="flex" >
-                    <h1>Mon projet 4</h1>
-                </div> -->
-            </div>
+        <div id="container">
+            <img name="slide" src="" alt="" srcset="">
+            <i class="header fa-solid fa-chevron-right Precedent"></i>
+            <i class="header fa-solid fa-chevron-left Suivant"></i>
+        
         </div>
         <script src="script.js"></script>
     </body>
