--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="trello.css">
+    <link rel="stylesheet" href="style.css">
     <title>Tableau Trello</title>
 </head>
 <body>
-    <div class="parent">
+    <div class="container">
         <div class="menu ">
             <div class="createtable "><button class="addcolone moduleanime">AJOUTER COLONNE</button></div>
             <div class="createtache animemenu"><button class="addcolone">CREER TACHE</button></div>
@@ -24,7 +24,7 @@
                     <form class="formodal" action="" ></form><br>
                         <p>remplir les informations du nouvelle tache</p><br>
                         <p>tache</p><br>
-                        <textarea name="texttache" id="texttache" cols="30" rows="10"></textarea><br><br>
+                        <textarea name="texttache" id="texttache" cols="30" rows="12"></textarea><br><br>
                         <p><label for="date">date</label></p><br>
                         <input type="date" id="date" value="date"><br><br>
                         <p><label for="debut"> heure de debut </label></p><br>
@@ -49,5 +49,5 @@
     <i class="fa-solid fa-plus fa-2x bplus">plus</i>
 </body>
 <script src="https://kit.fontawesome.com/746ce6113a.js" crossorigin="anonymous"></script>
-<script src="trello.js"></script>
+<script src="script.js"></script>
 </html>
